--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bebidas feiras com café</title>
+    <title>Bebidas feitas com café</title>
+    <link rel="icon" type="imagen/x-icon" href="img/132-1324399_coffee-icons-free-iconos-de-cafe-png-clipart-removebg-preview.png">
 <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <div class="tudo">
