--- a/pages/contato.html
+++ b/pages/contato.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato</title>
+    <title>Contato - Ryan</title>
+    <link rel="icon" type="image/x-icon" href="img/132-1324399_coffee-icons-free-iconos-de-cafe-png-clipart-removebg-preview.png">
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <div class="avatar">
-    <img src="../img/Ryan.png" alt="Foto Perfil">
-    <p>ryan.gabriel@estudante.iftm.edu.br</p>
-    </div>
-    <h1>Sobre mim</h1>
-    <p>Sou o Ryan tenho 16 anos sou estudante do iftm-campus patrocinio 
-    </p>
-   
-     <div><a href="../index.html">Voltar</a>
-        </div> 
-      <div><a href="https://github.com/Rzinhhj">github</a>
-        </div> 
+    <header>
+        <div class="avatar">
+            <img src="../img/Ryan.png" alt="Foto de perfil do Ryan" title="Ryan Gabriel">
+            <p>Email: <a href="mailto:ryan.gabriel@estudante.iftm.edu.br">ryan.gabriel@estudante.iftm.edu.br</a></p>
+        </div>
+    </header>
+
+    <main>
+        <section class="sobre">
+            <h1>Sobre mim</h1>
+            <p>Sou o Ryan, tenho 16 anos e sou estudante do IFTM - Campus Patrocínio. Atualmente curso o ensino médio integrado à Técnico em Informática</p>
+        </section>
+
+        <section class="links">
+            <h2>Links úteis</h2>
+            <ul>
+                <li><a href="../index.html">Voltar para a página inicial</a></li>
+                <li><a href="https://github.com/Rzinhhj" target="_blank" rel="noopener noreferrer">Meu GitHub</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+    </footer>
 </body>
 </html>
