--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
              <footer>
             Aula para formatação de CSS. <a href="pages/contato.html" target="_blank"><button>Ryan G. C. D. Silva</button></a>
         </footer>
-
+<footer class="rodape">
+  <p>&copy; 2025 Ryan G. C. D. Silva. Todos os direitos reservados.</p>
+</footer>
 
         </div>
 
