--- a/pages/contato.html
+++ b/pages/contato.html
@@ -50,6 +50,9 @@
             <footer>
                 <li><a href="../index.html"><button>Voltar para a página inicial</button></a></li>
             </footer>
+            <footer class="rodape">
+  <p>&copy; 2025 Ryan G. C. D. Silva. Todos os direitos reservados.</p>
+</footer>
         </section>
     </main>
 
